--- a/GAPI.core/GAPI.core.csproj
+++ b/GAPI.core/GAPI.core.csproj
@@ -43,6 +43,9 @@
     <Reference Include="Google.Apis.Core, Version=1.40.0.0, Culture=neutral, PublicKeyToken=4b01fa6e34db77ab, processorArchitecture=MSIL">
       <HintPath>..\packages\Google.Apis.Core.1.40.0\lib\net45\Google.Apis.Core.dll</HintPath>
     </Reference>
+    <Reference Include="Google.Apis.Docs.v1, Version=1.40.0.1594, Culture=neutral, PublicKeyToken=4b01fa6e34db77ab, processorArchitecture=MSIL">
+      <HintPath>..\packages\Google.Apis.Docs.v1.1.40.0.1594\lib\net45\Google.Apis.Docs.v1.dll</HintPath>
+    </Reference>
     <Reference Include="Google.Apis.Drive.v3, Version=1.40.0.1594, Culture=neutral, PublicKeyToken=4b01fa6e34db77ab, processorArchitecture=MSIL">
       <HintPath>..\packages\Google.Apis.Drive.v3.1.40.0.1594\lib\net45\Google.Apis.Drive.v3.dll</HintPath>
     </Reference>
@@ -62,12 +65,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GDocApi.cs" />
     <Compile Include="GDriveApi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="credentials.json">
+    <None Include="client.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
